<<<<<<< HEAD
[gd_scene load_steps=40 format=3 uid="uid://u6phxioott5c"]
=======
[gd_scene load_steps=22 format=3 uid="uid://d883un6ilof6"]
>>>>>>> origin/microgames

[ext_resource type="Texture2D" uid="uid://brni2ye3h35s7" path="res://Assets/kitchen_background.png" id="1_7se1p"]
[ext_resource type="Script" path="res://Scripts/Kitchen.gd" id="1_hjfb8"]
[ext_resource type="PackedScene" uid="uid://dnt1pap5cyrvx" path="res://Scenes/Components/OrderTracker.tscn" id="4_4oyt0"]
[ext_resource type="PackedScene" path="res://Scenes/Components/OrderSpawner.tscn" id="4_sqh5n"]
[ext_resource type="PackedScene" uid="uid://diav24bdrxe1m" path="res://Scenes/UI/OrderTrackerDialog.tscn" id="5_3s0ib"]
[ext_resource type="Resource" uid="uid://c202jsm8sgybc" path="res://Resources/Recipes/cookies.tres" id="5_cluty"]
[ext_resource type="Resource" uid="uid://bwnq5okk2taen" path="res://Resources/Recipes/cake.tres" id="6_15k22"]
[ext_resource type="Texture2D" uid="uid://bxdmjnw83vw6a" path="res://Assets/completed.png" id="6_l2gtt"]
[ext_resource type="Texture2D" uid="uid://cxa0g1j4n3wwe" path="res://Assets/in_progress.png" id="7_p5an8"]
[ext_resource type="Resource" uid="uid://ddwwrgj7afykp" path="res://Resources/Recipes/croissant.tres" id="7_rj4d4"]
[ext_resource type="PackedScene" uid="uid://bhlrsnbtkbq6y" path="res://Scenes/Components/droid.tscn" id="7_x5gre"]
[ext_resource type="Texture2D" uid="uid://bynbsygtxakga" path="res://Assets/incomplete.png" id="8_vvdjn"]
[ext_resource type="PackedScene" uid="uid://bd51qipgd5htg" path="res://Scenes/Components/Interactable.tscn" id="8_xnfjy"]
[ext_resource type="Texture2D" uid="uid://xt6ufjiufigx" path="res://Assets/area_highlight.png" id="9_i0njw"]
[ext_resource type="Texture2D" uid="uid://c1h4jem4tkrnl" path="res://Assets/Controls/interact.png" id="10_i0fk7"]
[ext_resource type="PackedScene" uid="uid://cbha6lmyk56do" path="res://Scenes/Components/Player.tscn" id="15_8mjq4"]

[sub_resource type="LabelSettings" id="LabelSettings_hlyr4"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_83scp"]
font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5kuc"]
bg_color = Color(0, 0, 0, 0.784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1ooa3"]
vertices = PackedVector2Array(64, 336, 64, 224, 440, 224, 160, 336, 440, 192, 888, 192, 888, 224, 1208, 224, 1208, 672, 1064, 480, 1064, 672, 296, 480, 160, 672, 296, 672)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(2, 4, 5, 6), PackedInt32Array(6, 7, 8, 9), PackedInt32Array(8, 10, 9), PackedInt32Array(2, 6, 9, 11, 3), PackedInt32Array(12, 3, 11, 13)])
outlines = Array[PackedVector2Array]([PackedVector2Array(64, 336, 160, 336, 160, 672, 296, 672, 296, 480, 1064, 480, 1064, 672, 1208, 672, 1208, 224, 888, 224, 888, 192, 440, 192, 440, 224, 64, 224)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_tc0wt"]
vertices = PackedVector2Array(1064, 672, 296, 672, 296, 608, 640, 608, 640, 480, 736, 480, 736, 608, 1064, 608)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(3, 4, 5, 6), PackedInt32Array(0, 3, 6), PackedInt32Array(0, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(296, 672, 296, 608, 640, 608, 640, 480, 736, 480, 736, 608, 1064, 608, 1064, 672)])

[node name="kitchen_main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_hjfb8")

[node name="round_timer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="time_tracker" type="Timer" parent="."]
wait_time = 0.5
autostart = true

<<<<<<< HEAD
[node name="player_spawn" type="Marker2D" parent="."]

[node name="wall_boundaries" type="StaticBody2D" parent="."]
visible = false
collision_mask = 0

[node name="boundaries" type="CollisionPolygon2D" parent="wall_boundaries"]
build_mode = 1
polygon = PackedVector2Array(440, 224, 64, 224, 64, 424, 160, 424, 160, 608, 128, 608, 128, 672, 1304, 672, 1304, 608, 1208, 608, 1208, 336, 1304, 336, 1304, 224, 888, 224, 888, 192, 440, 192)

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(680, 432)
collision_layer = 2
motion_mode = 1
safe_margin = 2.0
metadata/_edit_group_ = true

[node name="boundaries" type="CollisionShape2D" parent="player"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_yye5o")

[node name="sprite" type="AnimatedSprite2D" parent="player"]
position = Vector2(0, -65)
sprite_frames = SubResource("SpriteFrames_bm8yo")
animation = &"idle"

[node name="DirectionalMoveController" parent="player" instance=ExtResource("3_q7l5r")]

[node name="reachable_zone" type="Area2D" parent="player"]
position = Vector2(0, -56)
collision_layer = 4
collision_mask = 4
metadata/_edit_group_ = true

[node name="zone" type="CollisionShape2D" parent="player/reachable_zone"]
shape = SubResource("CircleShape2D_c2q0i")

[node name="left_counter_boundaries" type="StaticBody2D" parent="."]

[node name="boundaries" type="CollisionPolygon2D" parent="left_counter_boundaries"]
build_mode = 1
polygon = PackedVector2Array(352, 520, 352, 608, 632, 608, 632, 520)

[node name="right_counter_boundaries" type="StaticBody2D" parent="."]

[node name="boundaries" type="CollisionPolygon2D" parent="right_counter_boundaries"]
build_mode = 1
polygon = PackedVector2Array(736, 520, 736, 608, 1016, 608, 1016, 520)

[node name="order_tracker" parent="." node_paths=PackedStringArray("order_source", "order_destination", "fridge", "mixing_bowl", "cutting_station", "cooling_station", "batter_station", "icing_station", "sprinkling_station", "oven") instance=ExtResource("4_4oyt0")]
=======
[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="texture" type="TextureRect" parent="background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -683.0
offset_top = -384.0
offset_right = 683.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7se1p")

[node name="info_ui" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="info_ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="panel" type="PanelContainer" parent="info_ui/VBoxContainer"]
layout_mode = 2

[node name="padding" type="MarginContainer" parent="info_ui/VBoxContainer/panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="time_label" type="Label" parent="info_ui/VBoxContainer/panel/padding"]
layout_mode = 2
text = "Time Remaining: 0s"
label_settings = SubResource("LabelSettings_hlyr4")

[node name="earnings_label" type="Label" parent="info_ui/VBoxContainer/panel/padding"]
layout_mode = 2
size_flags_horizontal = 8
text = "Earnings: $0.00"
label_settings = SubResource("LabelSettings_83scp")

[node name="HBoxContainer" type="HBoxContainer" parent="info_ui/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="info_ui/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5kuc")

[node name="MarginContainer" type="MarginContainer" parent="info_ui/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="order_tracker_ui" parent="info_ui/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer" instance=ExtResource("5_3s0ib")]
layout_mode = 2
completed_icon = ExtResource("6_l2gtt")
in_progress_icon = ExtResource("7_p5an8")
incomplete_icon = ExtResource("8_vvdjn")

[node name="kitchen" type="CanvasLayer" parent="."]

[node name="player_spawn" type="Marker2D" parent="kitchen"]

[node name="Droid" parent="kitchen/player_spawn" node_paths=PackedStringArray("order_tracker", "order_spawner") instance=ExtResource("7_x5gre")]
position = Vector2(800, 360)
motion_mode = 0
order_tracker = NodePath("../../droid1_order_tracker2")
order_spawner = NodePath("../../order_spawner")

[node name="wall_boundaries" type="StaticBody2D" parent="kitchen"]
visible = false
collision_mask = 0

[node name="boundaries" type="CollisionPolygon2D" parent="kitchen/wall_boundaries"]
build_mode = 1
polygon = PackedVector2Array(440, 224, 64, 224, 64, 424, 160, 424, 160, 608, 128, 608, 128, 672, 1304, 672, 1304, 608, 1208, 608, 1208, 336, 1304, 336, 1304, 224, 888, 224, 888, 192, 440, 192)

[node name="left_counter_boundaries" type="StaticBody2D" parent="kitchen"]
visible = false

[node name="boundaries" type="CollisionPolygon2D" parent="kitchen/left_counter_boundaries"]
build_mode = 1
polygon = PackedVector2Array(352, 520, 352, 608, 632, 608, 632, 520)

[node name="right_counter_boundaries" type="StaticBody2D" parent="kitchen"]
visible = false

[node name="boundaries" type="CollisionPolygon2D" parent="kitchen/right_counter_boundaries"]
build_mode = 1
polygon = PackedVector2Array(736, 520, 736, 608, 1016, 608, 1016, 520)

[node name="player_order_tracker" parent="kitchen" node_paths=PackedStringArray("order_source", "order_destination", "fridge", "mixing_bowl", "cutting_station", "cooling_station", "batter_station", "icing_station", "sprinkling_station", "oven") instance=ExtResource("4_4oyt0")]
>>>>>>> origin/microgames
order_source = NodePath("../source_highlight")
order_destination = NodePath("../destination_highlight")
fridge = NodePath("../fridge_highlight")
mixing_bowl = NodePath("../mixing_highlight")
cutting_station = NodePath("../cutting_highlight")
cooling_station = NodePath("../cooling_highlight")
batter_station = NodePath("../batter_highlight")
icing_station = NodePath("../icing_highlight")
sprinkling_station = NodePath("../sprinkle_highlight")
oven = NodePath("../oven_highlight")

[node name="droid1_order_tracker2" parent="kitchen" node_paths=PackedStringArray("order_source", "order_destination", "fridge", "mixing_bowl", "cutting_station", "cooling_station", "batter_station", "icing_station", "sprinkling_station", "oven") instance=ExtResource("4_4oyt0")]
order_source = NodePath("../source_highlight")
order_destination = NodePath("../destination_highlight")
fridge = NodePath("../fridge_highlight")
mixing_bowl = NodePath("../mixing_highlight")
cutting_station = NodePath("../cutting_highlight")
cooling_station = NodePath("../cooling_highlight")
batter_station = NodePath("../batter_highlight")
icing_station = NodePath("../icing_highlight")
sprinkling_station = NodePath("../sprinkle_highlight")
oven = NodePath("../oven_highlight")
invisible = true

[node name="droid2_order_tracker3" parent="kitchen" node_paths=PackedStringArray("order_source", "order_destination", "fridge", "mixing_bowl", "cutting_station", "cooling_station", "batter_station", "icing_station", "sprinkling_station", "oven") instance=ExtResource("4_4oyt0")]
order_source = NodePath("../source_highlight")
order_destination = NodePath("../destination_highlight")
fridge = NodePath("../fridge_highlight")
mixing_bowl = NodePath("../mixing_highlight")
cutting_station = NodePath("../cutting_highlight")
cooling_station = NodePath("../cooling_highlight")
batter_station = NodePath("../batter_highlight")
icing_station = NodePath("../icing_highlight")
sprinkling_station = NodePath("../sprinkle_highlight")
oven = NodePath("../oven_highlight")
invisible = true

[node name="order_spawner" parent="kitchen" instance=ExtResource("4_sqh5n")]
spawnable_orders = Array[Resource("res://Scripts/Recipe.gd")]([ExtResource("5_cluty"), ExtResource("6_15k22"), ExtResource("7_rj4d4")])

[node name="fridge_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(200, 464)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="mixing_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(200, 576)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="batter_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(400, 464)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="cutting_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(568, 464)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="icing_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(784, 464)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="sprinkle_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(920, 464)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="oven_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(1168, 368)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="cooling_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(1168, 488)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="destination_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(1112, 248)
interact_input_map = "interact"
enabled = false
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

[node name="source_highlight" parent="kitchen" instance=ExtResource("8_xnfjy")]
position = Vector2(656, 216)
interact_input_map = "interact"
effect_sprite = ExtResource("9_i0njw")
proximity_sprite = ExtResource("10_i0fk7")

<<<<<<< HEAD
[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="texture" type="TextureRect" parent="background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -683.0
offset_top = -384.0
offset_right = 683.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7se1p")

[node name="info_ui" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="info_ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="panel" type="PanelContainer" parent="info_ui/VBoxContainer"]
layout_mode = 2

[node name="padding" type="MarginContainer" parent="info_ui/VBoxContainer/panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="time_label" type="Label" parent="info_ui/VBoxContainer/panel/padding"]
layout_mode = 2
text = "Time Remaining: 0s"
label_settings = SubResource("LabelSettings_hlyr4")

[node name="earnings_label" type="Label" parent="info_ui/VBoxContainer/panel/padding"]
layout_mode = 2
size_flags_horizontal = 8
text = "Earnings: $0.00"
label_settings = SubResource("LabelSettings_83scp")

[node name="HBoxContainer" type="HBoxContainer" parent="info_ui/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="info_ui/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5kuc")

[node name="MarginContainer" type="MarginContainer" parent="info_ui/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="order_tracker_ui" parent="info_ui/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer" instance=ExtResource("5_3s0ib")]
layout_mode = 2
completed_icon = ExtResource("6_l2gtt")
in_progress_icon = ExtResource("7_p5an8")
incomplete_icon = ExtResource("8_vvdjn")
=======
[node name="player" parent="kitchen" instance=ExtResource("15_8mjq4")]
position = Vector2(544, 416)
motion_mode = 0

[node name="floor_space" type="NavigationRegion2D" parent="kitchen"]
visible = false
navigation_polygon = SubResource("NavigationPolygon_1ooa3")

[node name="floor_space2" type="NavigationRegion2D" parent="kitchen"]
visible = false
navigation_polygon = SubResource("NavigationPolygon_tc0wt")
>>>>>>> origin/microgames

[node name="microgames" type="CanvasLayer" parent="."]
layer = 2

[connection signal="timeout" from="round_timer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="time_tracker" to="." method="_update_time_remaining_label"]
[connection signal="order_changed" from="kitchen/player_order_tracker" to="." method="_on_player_order_changed"]
[connection signal="order_changed" from="kitchen/player_order_tracker" to="." method="_on_order_changed"]
[connection signal="order_completed" from="kitchen/player_order_tracker" to="." method="_on_player_order_completed"]
[connection signal="progress_changed" from="kitchen/player_order_tracker" to="." method="_on_progress_changed"]
[connection signal="order_completed" from="kitchen/droid1_order_tracker2" to="." method="_on_order_completed"]
[connection signal="order_completed" from="kitchen/droid2_order_tracker3" to="." method="_on_order_completed"]
[connection signal="invoked" from="kitchen/fridge_highlight" to="." method="_on_fridge_highlight_invoked"]
[connection signal="invoked" from="kitchen/mixing_highlight" to="." method="_on_mixing_highlight_invoked"]
[connection signal="invoked" from="kitchen/batter_highlight" to="." method="_on_batter_highlight_invoked"]
[connection signal="invoked" from="kitchen/cutting_highlight" to="." method="_on_cutting_highlight_invoked"]
[connection signal="invoked" from="kitchen/icing_highlight" to="." method="_on_icing_highlight_invoked"]
[connection signal="invoked" from="kitchen/sprinkle_highlight" to="." method="_on_sprinkle_highlight_invoked"]
[connection signal="invoked" from="kitchen/oven_highlight" to="." method="_on_oven_highlight_invoked"]
[connection signal="invoked" from="kitchen/cooling_highlight" to="." method="_on_cooling_highlight_invoked"]
[connection signal="invoked" from="kitchen/destination_highlight" to="." method="_on_destination_highlight_invoked"]
[connection signal="invoked" from="kitchen/source_highlight" to="." method="_on_order_source_invoked"]